fix: :lipstick: align cart in Header

--- a/src/index.css
+++ b/src/index.css
@@ -189,6 +189,8 @@ button {
 
 .display {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .numCount {
